--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
+  "root": true,
   "extends": [
     "next/core-web-vitals",
     "next/typescript",
     "standard",
-    "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "plugins": ["import"],
