--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.0.1",
     "prettier": "^3.3.3",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
