--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "next": "15.0.1",
     "prettier": "^3.3.3",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.31.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "web-vitals": "^4.2.4"
   }
 }
