--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "zod": "^3.23.8"
   },
